--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Welcome to Harry stationary</title>
+    <title>Welcome to Harry stationery</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="index.html">Harry Stationary</a>
+    <a class="navbar-brand" href="index.html">Harry Stationery</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -30,7 +30,7 @@
             Services
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="services.html">Stationary</a>
+              <a class="dropdown-item" href="services.html">Stationery</a>
             <a class="dropdown-item" href="services.html">Xerox</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="contact.html"> contact us!</a>
@@ -56,8 +56,8 @@
 
 <div class="container-fluid mt-3">
   <div class="jumbotron">
-  <h1 class="display-4">Welcome to Harry Stationary</h1>
-  <p class="lead">We provide all types of services related to printing books, Stationary items at good cost,and other technical works.</p>
+  <h1 class="display-4">Welcome to Harry Stationery</h1>
+  <p class="lead">We provide all types of services related to printing books, Stationery items at good cost,and other technical works.</p>
   <hr class="my-4">
   <p>Do not hesitate to reach us.</p>
   <a class="btn btn-primary btn-lg" href="https://www.google.com/maps/place/Mahalaxmi+Photostat/@28.7913422,76.0844254,13z/data=!4m9!1m2!2m1!1sstationery+shop+near+me!3m5!1s0x391266da94a7c733:0x481372533d0b1573!8m2!3d28.8035403!4d76.1418273!15sChdzdGF0aW9uZXJ5IHNob3AgbmVhciBtZSIDkAEBkgEQc3RhdGlvbmVyeV9zdG9yZQ" target="_blank" role="button">View on Google maps</a>
@@ -231,7 +231,7 @@
   <div class="container-fluid mt-3">
     <footer class="container">
       <p class="float-right"><a href="#">Back to top</a></p>
-      <p>© 2017-2019 Harry Stationary, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
+      <p>© 2017-2019 Harry Stationery, Inc. · <a href="#">Privacy</a> · <a href="#">Terms</a></p>
     </footer><hr>
   </div>
 
